# AbschlussProjekt

./: .cache  .env  .gitignore  Anleitung.txt  README.md  birthdays.json  main.py  pyproject.toml
cogs/: audio_cog.py  birthday_cog.py  chat_cog.py  check_cog.py  graphic_cog.py  help_cog.py  play_cog.py  player_cog.py  watermark_cog.py
utils/: audio_effects.py  audio_utils.py  birthday_utils.py  chat_utils.py  check_utils.py  graphic_utils.py  play_utils.py  player_utils.py  watermark_handler.py
